# expertsystem

./: .cspell.json  .flake8  .gitignore  .gitpod.yml  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  README.md  codecov.yml  commitlint.config.js  cspell.json  environment.yml  labels.toml  particle_list.xml  particle_list.yml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.constraints/: py3.6.txt  py3.7.txt  py3.8.txt  py3.9.txt
.github/: pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: cd.yml  ci-dev.yml  ci-epic.yml  ci-tests.yml  ci.yml  linkcheck.yml  (+8 more)
.pre-commit-hooks/: set_first_cell.py
.reqs/: dev.in  test.in  test.txt
dev/: requirements-base.in  requirements-dev.in  requirements-doc.in  requirements-sty.in  requirements-test.in  upgrade.sh
doc/: Makefile  conf.py  contribute.rst  index.rst  installation.rst  interactive.rst  requirements.txt  usage.ipynb  usage.rst  widgets.rst
docs/: .gitignore  conf.py  contribute.rst  index.md  install.md  install.rst  interactive.ipynb  references.md  usage.ipynb
examples/: particles.ipynb  quick_start.ipynb  quickstart.ipynb  visualization.ipynb
expertsystem/: __init__.py  data.py  nested_dicts.py  particle.py  particle_list.xml  particle_list.yml  particles.py  topology.py
reqs/: requirements-doc.in  upgrade.sh
schemas/: yaml-particle-list.json
tests/: .coveragerc  conftest.py  pytest.ini
(+310 files in other folders)
