[metadata]
name = expertsystem
version = 0.1.2-alpha
author = The ComPWA Team
author_email = compwa-admin@ep1.rub.de
maintainer_email = compwa-admin@ep1.rub.de
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ComPWA/expertsystem
license = GPLv3 or later
include_package_data = True
keywords =
    HEP
    PWA
    particles
    physics
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Typing :: Typed

[options.package_data]
* =
    particle_list.xml
    particle_list.yml

[options]
python_requires = >=3.6
install_requires =
    numpy==1.19.0
    progress==1.5
    PyYAML==5.3.1
    xmltodict==0.12.0
packages = find:
